--- a/frontend/web/css/styles.css
+++ b/frontend/web/css/styles.css
@@ -10,3 +10,36 @@
 .partners a {
   margin-top: 1em;
 }
+
+/* line 15, ../sass/_custom.scss */
+#map {
+  width: 100%;
+  height: 25em;
+}
+
+/* line 20, ../sass/_custom.scss */
+.contact_btn {
+  margin-top: 1em;
+}
+
+/* line 24, ../sass/_custom.scss */
+.contact_form {
+  margin: 5em 0;
+}
+
+/* line 29, ../sass/_custom.scss */
+.triger_info {
+  border: 20px solid transparent;
+  border-top: 20px solid #ACB8B8;
+  position: absolute;
+  bottom: -35px;
+  left: 44%;
+}
+
+/* line 37, ../sass/_custom.scss */
+.contact__info_blog {
+  margin-top: 5em;
+  background-color: #ACB8B8;
+  border-radius: 5px;
+  padding: 20px 40px;
+}
