--- a/frontend/web/sass/_custom.scss
+++ b/frontend/web/sass/_custom.scss
@@ -1,13 +1,42 @@
-.partners{
-  .titlePartners{
+.partners {
+  .titlePartners {
     margin-bottom: 5em;
   }
-  img{
+  img {
     //width: 10em;
     //height: 10em;
     margin-bottom: 1em;
   }
-  a{
+  a {
     margin-top: 1em;
   }
+}
+
+#map {
+  width: 100%;
+  height: 25em;
+}
+
+.contact_btn {
+  margin-top: 1em;
+}
+
+.contact_form {
+  margin: 5em 0;
+}
+
+
+.triger_info {
+  border: 20px solid transparent;
+  border-top: 20px solid #ACB8B8;
+  position: absolute;
+  bottom: -35px;
+  left: 44%;
+}
+
+.contact__info_blog {
+  margin-top: 5em;
+  background-color: #ACB8B8;
+  border-radius: 5px;
+  padding: 20px 40px;
 }
